drkns 25.09.2016 20:06:40 +0200 - build 4796

1. 0003255: Content of symbolic links not copied

2. 0003309: File associations - Ctrl-Up and Ctrl-Down do not move items

3. 0003310: PluginW.pas out of sync with plugin.hpp

4. 0003311: Incorrect QueryDosDevice call in MatchNtPathRoot (pathmix.cpp)

drkns 22.09.2016 02:17:12 +0200 - build 4795

1. Древний, ещё как минимум со времён 1.65 баг - в главном меню можно было получить переполнение стека.

2. Рефакторинг.

drkns 18.09.2016 02:48:50 +0200 - build 4794

1. Обход бага VS. Подробности - connect #3103404.

drkns 17.09.2016 22:13:26 +0200 - build 4793

1. constexpr.

2. longPathAware = true для Windows 10.

3. Рефакторинг.

drkns 15.09.2016 02:23:25 +0200 - build 4792

1. Уточнение 4784.1.

2. Code analysis warnings.

drkns 13.09.2016 18:28:08 +0200 - build 4791

1. Падение при копировании выделенного UTF-8 текста из вьювера.

2. Некорректное преобразование text/hex в диалоге поиска.

3. Падение при нажатии End на radiobutton в диалоге.

4. Не обновлялся экран редактора при прокрутке по Ctrl-Up/Down из меню "Find all".

svs 13.09.2016 15:13:03 +0300 - build 4790

1. SQLite 3.14.2

drkns 12.09.2016 23:35:38 +0200 - build 4789

1. Уточнение 4788.3.

2. Пара мелочей.

drkns 12.09.2016 19:23:16 +0200 - build 4788

1. Вывод плагином диалога при загрузке мог оставлять заголовок консоли пустым.

2. DM_SETTEXT во время DN_INITDIALOG сбрасывал 'unchanged' в строках ввода.

3. Глобальная замена __int64 -> long long и прочий рефакторинг.

drkns 11.09.2016 18:53:56 +0200 - build 4787

1. 0003299: начиная с версии 3.0.4784 x86 нельзя создать новую ассоциацию - не сохраняется после редактирования

drkns 11.09.2016 04:28:53 +0200 - build 4786

1. 0003294: Пустая строка комбобокса

2. Уточнение обработки DIF_EDITOR в диалогах.

3. Пара мелочей.

drkns 09.09.2016 23:40:13 +0200 - build 4785

1. После 4778 криво работал WindowMode.

drkns 08.09.2016 23:08:42 +0200 - build 4784

1. Рефакторинг.

2. TinyXML-2 4.0.1.
